Add: redirect url link for add drama button

--- a/frontend/page/add.ejs
+++ b/frontend/page/add.ejs
@@ -1,14 +1,14 @@
 <!-- Header -->
-<%- include("./member/member.header.ejs") %>
+<%- include("./add/add.header.ejs") %>
 
 <!-- Navigation Bar -->
 <%- include("./commons/common.navigation.ejs") %>
 
-<!-- Member Profile -->
-<%- include("./member/member.profile.ejs") %>
+<!-- Add Drama -->
+<%- include("./add/add.drama.ejs") %>
 
 <!-- Footer -->
 <%- include("./commons/common.footer.ejs") %>
 
 <!-- Script -->
-<%- include("./member/member.script.ejs") %>
+<%- include("./add/add.script.ejs") %>
