--- a/frontend/page/commons/common.navigation.ejs
+++ b/frontend/page/commons/common.navigation.ejs
@@ -14,8 +14,8 @@
                     </div>
                 </div>
                 <div class="nav-bar-right-title">
-                    <img class="nav-bar-right-title-add-drama-icon" src="/img/icon_add_drama.png">
-                    <div class="nav-bar-right-title-add-drama">提供劇集資料</div>
+                    <img id="addDramaMobile" class="nav-bar-right-title-add-drama-icon" src="/img/icon_add_drama.png">
+                    <div id="addDrama" class="nav-bar-right-title-add-drama">提供劇集資料</div>
 
                     <a href="/signin"><img id="signinIconBtn" class="nav-bar-right-title-signin-icon" src="/img/icon_signin.png"></a>
                     <a href="/signin"><div id="signinBeforeBtn" class="nav-bar-right-title-signin-before">登入</div></a>
