Add: video button of drama page to play the drama video

--- a/frontend/page/drama.ejs
+++ b/frontend/page/drama.ejs
@@ -2,6 +2,9 @@
 <%- include("./drama/drama.header.ejs") %>
 
 <!-- Drama Content Container -->
+<%- include("./drama/drama.video.ejs") %>
+
+<!-- Drama Content Container -->
 <%- include("./drama/drama.show.ejs") %>
 
 <!-- Navigation Bar -->
