--- a/frontend/page/drama/drama.script.ejs
+++ b/frontend/page/drama/drama.script.ejs
@@ -4,6 +4,7 @@
 <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-datalabels@0.7.0/dist/chartjs-plugin-datalabels.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-annotation@0.5.7/chartjs-plugin-annotation.min.js"></script>
 <script src="https://unpkg.com/fast-average-color/dist/index.browser.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>
 <script type="module" src="/js/drama/drama.main.js"></script>
 <script src="/js/lib/topbar.js"></script>
 
