Add: latest drama page

--- a/frontend/page/commons/common.navigation.ejs
+++ b/frontend/page/commons/common.navigation.ejs
@@ -9,8 +9,12 @@
                         </a>
                     </div>
                     <div class="nav-bar-left-title-drama-list">
-                        <img class="nav-bar-left-title-drama-icon" src="/img/icon_drama.png">
-                        <div class="nav-bar-left-title-drama-title">最新日本劇集</div>
+                        <a href="/latest">
+                            <img class="nav-bar-left-title-drama-icon" src="/img/icon_drama.png">
+                        </a>
+                        <div class="nav-bar-left-title-drama-title">
+                            <a href="/latest">最新日本劇集</a>
+                        </div>
                     </div>
                 </div>
                 <div class="nav-bar-right-title">
