Add: latest drama API route

--- a/frontend/page/latest.ejs
+++ b/frontend/page/latest.ejs
@@ -8,6 +8,9 @@
 <%- include("./commons/common.navigation.ejs") %>
 
 <!-- Latest Drama List -->
+<%- include("./latest/latest.sortlist.ejs") %>
+
+<!-- Latest Drama List -->
 <%- include("./latest/latest.list.ejs") %>
 
 <!-- Footer -->
