--- a/frontend/page/latest/latest.list.ejs
+++ b/frontend/page/latest/latest.list.ejs
@@ -10,4 +10,11 @@
             <span class="page-link">上一頁</span>
         </li> -->
     </ul>
+
+    <ul id="lastestSortlistPagination" class="pagination">
+        <!-- <li id="prevPage" class="page-item disabled">
+            <span class="page-link">上一頁</span>
+        </li> -->
+    </ul>
+
 </div>
