--- a/frontend/public/css/latest.css
+++ b/frontend/public/css/latest.css
@@ -1,6 +1,5 @@
 /* Latest List */
-.latest-list-container,
-.row {
+.latest-list-container {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -8,7 +7,7 @@
 
 .latest-list-width {
     width: 1200px;
-    margin-top: 100px;
+    margin-top: 20px;
     /* margin-bottom: 100px; */
 }
 
@@ -26,12 +25,16 @@
     cursor: pointer;
 }
 
+.latest-list-drama:hover {
+    filter: brightness(0.85) contrast(120%);
+}
+
 .latest-list-drama-photo {
     width: 100%;
     height: 400px;
     object-position: center;
     object-fit: cover;
-    /* border-radius: 5px; */
+    border-radius: 5px;
 }
 
 .latest-list-drama-title {
@@ -54,6 +57,8 @@
     color: #636c7d;
 }
 
+
+/* Pagination */
 .pagination-container {
     display: flex;
     justify-content: center;
@@ -69,6 +74,75 @@
     cursor: pointer;
 }
 
+.pagination > .active > a
+{
+    color: white;
+    background-color: rgb(19, 169, 228) !Important;
+    border: solid 1px rgb(19, 169, 228) !Important;
+}
+
+.pagination > li > a
+{
+    color: rgb(19, 169, 228);
+}
+
+/* Sortlist Bar */
+.latest-sortlist-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.latest-sortlist {
+    width: 1200px;
+    margin-top: 100px;
+}
+
+.latest-sortlist-week {
+    display: flex;
+    justify-content: left;
+    align-items: center;
+}
+
+.latest-sortlist-week-title-all {
+    color: rgb(2, 177, 247);
+    border: 1px solid rgb(2, 177, 247);
+}
+
+.latest-sortlist-week-title,
+.latest-sortlist-week-title-all {
+    flex: auto;
+    font-weight: bold;
+    margin: 5px 5px 5px 10px;
+    padding: 8px;
+    text-align: center;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.latest-sortlist-week-title:hover,
+.latest-sortlist-week-title-all:hover {
+    color: rgb(2, 177, 247);
+}
+
+.latest-sortlist-week-header {
+    flex: none;
+    width: 120px;
+    margin: 10px;
+    padding: 8px;
+    border-radius: 5px;
+    text-align: center;
+    font-weight: bold;
+    color: #fff;
+    background-color: rgb(2, 177, 247);
+}
+
+.latest-sortlist-week-header:hover {
+    opacity: 0.8;
+}
+
+
+
 
 /* Other Devices */
 @media(max-width: 1200px) {
@@ -81,17 +155,25 @@
         width: 35%;
     }
 
-    .latest-list-drama-photo {
-        height: auto;
-        object-fit: contain;
+    .latest-sortlist {
+        margin: 100px 20px 0px 20px;
     }
 
 }
 
 @media(max-width: 600px) {
 
+    .latest-list-drama-photo {
+        height: auto;
+        object-fit: contain;
+    }
+
     .latest-list-drama {
         width: 90%;
+    }
+
+    .latest-sortlist-container {
+        display: none;
     }
 
 }
