Add: popular list API route and page

--- a/frontend/page/latest.ejs
+++ b/frontend/page/latest.ejs
@@ -7,7 +7,7 @@
 <!-- Navigation Bar -->
 <%- include("./commons/common.navigation.ejs") %>
 
-<!-- Latest Drama List -->
+<!-- Sortlist Bar -->
 <%- include("./latest/latest.sortlist.ejs") %>
 
 <!-- Latest Drama List -->
