--- a/frontend/page/latest/latest.sortlist.ejs
+++ b/frontend/page/latest/latest.sortlist.ejs
@@ -1,15 +1,20 @@
 <div class="latest-sortlist-container">
     <div class="latest-sortlist">
         <div class="latest-sortlist-week">
-            <div class="latest-sortlist-week-header">按星期播放</div>
+            <div class="latest-sortlist-week-header">按每週播放</div>
             <div id="latestSortlistWeekAll" class="latest-sortlist-week-title-all">全部</div>
-            <div id="每週一" class="latest-sortlist-week-title">星期一</div>
-            <div id="每週二" class="latest-sortlist-week-title">星期二</div>
-            <div id="每週三" class="latest-sortlist-week-title">星期三</div>
-            <div id="每週四" class="latest-sortlist-week-title">星期四</div>
-            <div id="每週五" class="latest-sortlist-week-title">星期五</div>
-            <div id="每週六" class="latest-sortlist-week-title">星期六</div>
-            <div id="每週日" class="latest-sortlist-week-title">星期日</div>
+            <div id="每週一" class="latest-sortlist-week-title">每週一</div>
+            <div id="每週二" class="latest-sortlist-week-title">每週二</div>
+            <div id="每週三" class="latest-sortlist-week-title">每週三</div>
+            <div id="每週四" class="latest-sortlist-week-title">每週四</div>
+            <div id="每週五" class="latest-sortlist-week-title">每週五</div>
+            <div id="每週六" class="latest-sortlist-week-title">每週六</div>
+            <div id="每週日" class="latest-sortlist-week-title">每週日</div>
+        </div>
+
+        <div class="popular-list">
+            <div class="popular-list-header">按受歡迎度</div>
+            <div id="mostPopularList" class="popular-list-title-all">全部</div>
         </div>
     </div>
 </div>
