--- a/frontend/public/css/latest.css
+++ b/frontend/public/css/latest.css
@@ -98,13 +98,15 @@
     margin-top: 100px;
 }
 
-.latest-sortlist-week {
+.latest-sortlist-week,
+.popular-list {
     display: flex;
     justify-content: left;
     align-items: center;
 }
 
-.latest-sortlist-week-title-all {
+.latest-sortlist-week-title-all,
+.popular-list-title-all {
     color: rgb(2, 177, 247);
     border: 1px solid rgb(2, 177, 247);
 }
@@ -120,12 +122,25 @@
     cursor: pointer;
 }
 
+.popular-list-title-all {
+    flex: none;
+    width: 105px;
+    font-weight: bold;
+    margin: 5px 5px 5px 10px;
+    padding: 8px;
+    text-align: center;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
 .latest-sortlist-week-title:hover,
-.latest-sortlist-week-title-all:hover {
+.latest-sortlist-week-title-all:hover,
+.popular-list-title-all:hover {
     color: rgb(2, 177, 247);
 }
 
-.latest-sortlist-week-header {
+.latest-sortlist-week-header,
+.popular-list-header {
     flex: none;
     width: 120px;
     margin: 10px;
@@ -137,9 +152,7 @@
     background-color: rgb(2, 177, 247);
 }
 
-.latest-sortlist-week-header:hover {
-    opacity: 0.8;
-}
+
 
 
 
