Add: search drama API route

--- a/frontend/page/index/index.banner.ejs
+++ b/frontend/page/index/index.banner.ejs
@@ -3,8 +3,8 @@
     <div class="search-bar">
         <div class="search-bar-title">最新2023冬季日本劇集在等你探索，立即瀏覽吧！</div>
         <div class="input-group mb-3">
-            <input type="text" class="form-control" placeholder="尋找日本劇集" aria-label="Recipient's username" aria-describedby="button-addon2">
-            <button class="btn" type="button" id="button-addon2"></button>
+            <input id="searchBarInput" type="text" class="form-control" placeholder="尋找日本劇集" aria-label="Recipient's username" aria-describedby="button-addon2">
+            <button id="searchBarBtn" class="btn" type="button" id="button-addon2"></button>
         </div>
     </div>
 </div>
