--- a/frontend/page/latest/latest.list.ejs
+++ b/frontend/page/latest/latest.list.ejs
@@ -4,7 +4,7 @@
     </div>
 </div>
 
-<div class="pagination-container">
+<div id="paginationContainer" class="pagination-container">
     <ul id="lastestListPagination" class="pagination">
         <!-- <li id="prevPage" class="page-item disabled">
             <span class="page-link">上一頁</span>
@@ -12,6 +12,8 @@
     </ul>
 
     <ul id="lastestSortlistPagination" class="pagination"></ul>
+
+    <ul id="categoryPagination" class="pagination"></ul>
 
     <ul id="popularPagination" class="pagination"></ul>
 
