--- a/frontend/public/css/latest.css
+++ b/frontend/public/css/latest.css
@@ -93,26 +93,28 @@
     align-items: center;
 }
 
-.latest-sortlist {
+.latest-sortlist-width {
     width: 1200px;
     margin-top: 100px;
 }
 
-.latest-sortlist-week,
-.popular-list {
+.latest-sortlist,
+.popular-list,
+.category-list {
     display: flex;
     justify-content: left;
     align-items: center;
 }
 
-.latest-sortlist-week-title-all,
-.popular-list-title-all {
+.latest-sortlist-title-all,
+.popular-list-title-all,
+.category-list-title-all {
     color: rgb(2, 177, 247);
     border: 1px solid rgb(2, 177, 247);
 }
 
-.latest-sortlist-week-title,
-.latest-sortlist-week-title-all {
+.latest-sortlist-title,
+.category-list-title {
     flex: auto;
     font-weight: bold;
     margin: 5px 5px 5px 10px;
@@ -122,7 +124,9 @@
     cursor: pointer;
 }
 
-.popular-list-title-all {
+.popular-list-title-all,
+.latest-sortlist-title-all,
+.category-list-title-all {
     flex: none;
     width: 105px;
     font-weight: bold;
@@ -133,16 +137,19 @@
     cursor: pointer;
 }
 
-.latest-sortlist-week-title:hover,
-.latest-sortlist-week-title-all:hover,
-.popular-list-title-all:hover {
+.latest-sortlist-title:hover,
+.latest-sortlist-title-all:hover,
+.popular-list-title-all:hover,
+.category-list-title-all:hover {
     color: rgb(2, 177, 247);
 }
 
-.latest-sortlist-week-header,
-.popular-list-header {
+.latest-sortlist-header,
+.popular-list-header,
+.category-list-header {
     flex: none;
     width: 120px;
+    height: 42px;
     margin: 10px;
     padding: 8px;
     border-radius: 5px;
@@ -151,10 +158,6 @@
     color: #fff;
     background-color: rgb(2, 177, 247);
 }
-
-
-
-
 
 
 /* Other Devices */
@@ -170,6 +173,12 @@
 
     .latest-sortlist {
         margin: 100px 20px 0px 20px;
+    }
+
+    .latest-sortlist,
+    .category-list,
+    .popular-list {
+        margin: 0px 20px 0px 20px;
     }
 
 }
