--- a/frontend/page/latest/latest.sortlist.ejs
+++ b/frontend/page/latest/latest.sortlist.ejs
@@ -14,7 +14,7 @@
         </div>
 
         <div class="category-list">
-            <div class="category-list-header">按類別</div>
+            <div class="category-list-header">按劇集類別</div>
             <div id="categoryListAll" class="category-list-title-all">全部</div>
             <div id="小說" class="category-list-title">小說 / 文學改編</div>
             <div id="動漫改編" class="category-list-title">動漫改編</div>
