--- a/frontend/public/css/common.css
+++ b/frontend/public/css/common.css
@@ -8,9 +8,9 @@ html, body, div, p, ul, li {
     vertical-align: baseline;
 }
 
-ul, ol {
+/* ul, ol {
     list-style: none;
-}
+} */
 
 a:link,
 a:visited {
