--- a/frontend/page/add.ejs
+++ b/frontend/page/add.ejs
@@ -1,6 +1,9 @@
 <!-- Header -->
 <%- include("./add/add.header.ejs") %>
 
+<!-- Add Drama Content Container -->
+<%- include("./add/add.show.ejs") %>
+
 <!-- Navigation Bar -->
 <%- include("./commons/common.navigation.ejs") %>
 
