--- a/frontend/page/add/add.drama.ejs
+++ b/frontend/page/add/add.drama.ejs
@@ -2,6 +2,7 @@
     <div class="add-drama-width">
         <div class="container-fluid">
             <div class="row d-flex justify-content-center">
+
                 <div class="row g-3 col-lg-3 add-drama-left-bar-margin">
                     <div class="add-drama-left-bar">
                         <div class="add-drama-left-bar-title">
@@ -18,8 +19,8 @@
 
                 <form class="row g-3 col-lg-9">
                     
-                    <div class="col-lg-6 mb-2">
-                        <label for="addDramaTitle" class="form-label">劇集名稱</label>
+                    <div class="col-lg-4 mb-2">
+                        <label for="addDramaTitle" class="form-label">劇集名稱 (中文)</label>
                         <input id="addDramaTitle" class="form-control" type="text" placeholder="例子: 女神的教室" required>
                         <div class="valid-feedback">
                             Looks good!
@@ -29,15 +30,43 @@
                         </div>
                     </div>
 
-                    <div class="col-lg-6">
+                    <div class="col-lg-4">
+                        <label for="addDramaTitleJp" class="form-label">劇集名稱 (日文)</label>
+                        <input id="addDramaTitleJp" class="form-control" type="text" placeholder="例子: 女神の教室" required>
+                        <div class="valid-feedback">
+                            Looks good!
+                        </div>
+                        <div id="validationServerUsernameFeedback" class="invalid-feedback">
+                            Please choose a username.
+                        </div>
+                    </div>
+
+                    <div class="col-lg-4">
                         <label for="addDramaCategory" class="form-label">劇集類別</label>
-                        <select id="addDramaCategory" class="form-select" aria-describedby="validationServer04Feedback" onfocus="this.size=5;" onblur="this.size=1;" onchange="this.size=1; this.blur();" required>
+                        <select id="addDramaCategory" class="form-select" aria-describedby="validationServer04Feedback" required>
                             <option selected disabled value="">請選擇</option>
+                            <option>校園</option>
+                            <option>政治</option>
+                            <option>愛情</option>
+                            <option>音樂</option>
+                            <option>動漫改編</option>
+                            <option>勵志</option>
+                            <option>警察/刑事</option>
+                            <option>小說/文學改編</option>
+                            <option>喜劇</option>
+                            <option>古裝</option>
+                            <option>懸疑/推理</option>
+                            <option>職場</option>
+                            <option>家庭/族</option>
+                            <option>錢關</option>
+                            <option>料理/美食</option>
+                            <option>恐怖</option>
+                            <option>神秘</option>
+                            <option>特攝</option>
+                            <option>鐵路相關</option>
                             <option>真人改編</option>
-                            <option>2</option>
-                            <option>3</option>
-                            <option>4</option>
-                            <option>5</option>
+                            <option>末日相關</option>
+                            <option>其他</option>
                         </select>
                         <div id="validationServer04Feedback" class="invalid-feedback">
                             Please select a valid state.
@@ -59,11 +88,15 @@
                         <label for="addDramaTV" class="form-label">劇集播放電視台</label>
                         <select id="addDramaTV" class="form-select" aria-describedby="validationServer04Feedback" required>
                             <option selected disabled value="">請選擇</option>
+                            <option>富士電視台</option>
+                            <option>日本電視台</option>
                             <option>東京電視台</option>
-                            <option>2</option>
-                            <option>3</option>
-                            <option>4</option>
-                            <option>5</option>
+                            <option>朝日電視台</option>
+                            <option>TBS</option>
+                            <option>NHK</option>
+                            <option>Abema</option>
+                            <option>Netflix</option>
+                            <option>其他</option>
                         </select>
                         <div id="validationServer04Feedback" class="invalid-feedback">
                             Please select a valid state.
@@ -82,7 +115,7 @@
                     </div>
 
                     <div class="col-lg-6 mb-2">
-                        <label for="addDramaWeek" class="form-label">劇集每週播放</label>
+                        <label for="addDramaWeek" class="form-label">劇集播放週</label>
                         <select id="addDramaWeek" class="form-select" aria-describedby="validationServer04Feedback" required>
                             <option selected disabled value="">請選擇</option>
                             <option>每週一</option>
@@ -99,7 +132,7 @@
                     </div>
 
                     <div class="col-lg-6">
-                        <label for="addDramaTimeOfBoardcast" class="form-label">劇集時間表</label>
+                        <label for="addDramaTimeOfBoardcast" class="form-label">劇集播放時間</label>
                         <input id="addDramaTimeOfBoardcast" type="text" class="form-control" placeholder="例子: 21:00" required>
                         <div class="valid-feedback">
                             Looks good!
@@ -120,10 +153,10 @@
                         </div>
                     </div>
 
-                    <div class="col-lg-6">
-                        <label for="addDramaRating" class="form-label">劇集收視率 (如適用)</label>
+                    <div class="col-lg-6 mb-2">
+                        <label for="addDramaRating" class="form-label">劇集收視率 (如有)</label>
                         <div class="input-group">
-                            <input id="addDramaRating" type="text" class="form-control" placeholder="例子: 10.5, 10, 9.1, 12">
+                            <input id="addDramaRating" type="text" class="form-control" placeholder="例子: 10.5, 10, 9.1, 12 (按集數順序並以逗號分隔)">
                             <div class="input-group-text">%</div>
                         </div>
                         <div class="valid-feedback">
@@ -136,7 +169,7 @@
                     
                     <div class="col-lg-6">
                         <label for="addDramaMedia" class="form-label">劇集媒體資訊網址</label>
-                        <input id="addDramaMedia" type="text" class="form-control" placeholder="例子: https://youtu.be/P90avWuEH_U" required>
+                        <input id="addDramaMedia" type="text" class="form-control" placeholder="例子: https://www.youtube.com/embed/P90avWuEH_U" required>
                         <div class="valid-feedback">
                             Looks good!
                         </div>
@@ -145,11 +178,35 @@
                         </div>
                     </div>
 
-                    <div class="col-12 d-flex justify-content-center">
-                        <button id="handleAddDramaBtn" class="btn" type="submit">提供劇集資料</button>
+                    <div class="col-lg-12 mb-2">
+                        <label for="addDramaVideo" class="form-label">劇集來源網址 (如有) [僅限於磁力連結 Magnet URL]</label>
+                        <textarea id="addDramaVideo" type="text" class="form-control" placeholder="例子: magnet:?xt=urn:btih:2TP3A57GUMJ3KG4QWW3EE432WAL3575L, magnet:?xt=urn:btih:XGNKSKDBQVMFWWHLSTTNLJZ3GTDFJFKZ (按集數順序並以逗號分隔)" required></textarea>
+                        <div class="valid-feedback">
+                            Looks good!
+                        </div>
+                        <div id="validationServerUsernameFeedback" class="invalid-feedback">
+                            Please choose a username.
+                        </div>
                     </div>
 
+                    <div class="col-lg-12 mb-2">
+                        <label for="addDramaCoverPhoto" class="form-label">上載劇集封面圖片</label>
+                        <input id="addDramaCoverPhoto" type="file" class="form-control" accept=".jpg, .jpeg, .png" required>
+                        <div class="valid-feedback">
+                            Looks good!
+                        </div>
+                        <div id="validationServerUsernameFeedback" class="invalid-feedback">
+                            Please choose a username.
+                        </div>
+                    </div>
+                    
+                    <img id="addDramaCoverPhotoPreviewContainer" style="display:none;"></img>
+
                 </form>
+
+                <div class="col-12 d-flex justify-content-center">
+                    <button id="handleAddDramaBtn" class="btn" type="submit">提供劇集資料</button>
+                </div>
             </div>
         </div>
     </div>
