--- a/frontend/public/css/common.css
+++ b/frontend/public/css/common.css
@@ -147,11 +147,12 @@ html {
 .footer {
     display: flex;
     position: absolute;
-    bottom: 0;
+    bottom: 1;
     align-items: center;
     justify-content: center;
     width: 100%;
     height: 200px;
+    margin-top: 80px;
     background-color: #1f2b3e;
     color: #fff;
     font-weight: bold;
