--- a/frontend/page/drama/drama.introduction.ejs
+++ b/frontend/page/drama/drama.introduction.ejs
@@ -2,27 +2,65 @@
     <div id="transparentLayer" class="transparent-layer"></div>
     <div class="drama-banner-width">
 
-        <div class="drama-photo-container">
-            <img id="dramaCoverPhoto" class="drama-photo">
-        </div>
+        <input type="file" id="editDramaCoverPhotoBtn" style="display:none" accept=".jpg, .jpeg, .png" />
+        <label id="editDramaCoverPhotoLabel" class="drama-photo-container">
+
+            <img id="dramaCoverPhoto" class="drama-photo"></img>
+
+            <div id="editDramaCoverPhotoSubmitContainer" class="edit-drama-cover-photo-submit-btn" style="display:none;">
+                <img id="editDramaCoverPhotoConfirmBtn" class="edit-drama-cover-photo-submit-btn-confirm" src="/img/icon_tick.png">
+                <img id="editDramaCoverPhotoNotConfirmBtn" class="edit-drama-cover-photo-submit-btn-not-confirm" src="/img/icon_cross.png">
+            </div>
+
+        </label>
+
+
+
 
         <div id="dramaDetailsFontColor" class="drama-details-container">
 
             <div id="dramaTitle" class="drama-details-title"></div>
-
-            <div id="dramaCategory" class="drama-details-category"></div>
+            <div id="dramaCategory" class="drama-details-content-edit1"></div>
+            <img src="/img/icon_edit_black.png" id="edit1" class="individual-edit-btn" style="z-index:999; display:none"></img>
+            <img data-confirm-yes-1 src="/img/icon_tick.png" id="confirmYes" class="confirm-btn-edit1" name="edit1" style="z-index:999; display:none"></img>
+            <img data-confirm-no-1 src="/img/icon_cross.png" id="confirmNo" class="confirm-btn-edit1" name="edit1" style="z-index:999; display:none"></img>
 
             <div class="drama-details-brief-title">概要</div>
+            <img src="/img/icon_edit_black.png" id="edit2" class="individual-edit-btn" style="z-index:999; display:none"></img>
+            <div id="dramaIntroduction" class="drama-details-content-edit2"></div>
+            <img data-confirm-yes-2 src="/img/icon_tick.png" id="confirmYes" class="confirm-btn-edit2" name="edit2" style="z-index:999; display:none"></img>
+            <img data-confirm-no-2 src="/img/icon_cross.png" id="confirmNo" class="confirm-btn-edit2" name="edit2" style="z-index:999; display:none"></img>
 
-            <div id="dramaIntroduction" class="drama-details-brief"></div>
+            <div id="dramaTV" class="drama-details-content-edit3"></div>
+            <img src="/img/icon_edit_black.png" id="edit3" class="individual-edit-btn" style="z-index:999; display:none"></img>
+            <img data-confirm-yes-3 src="/img/icon_tick.png" id="confirmYes" class="confirm-btn-edit3" name="edit3" style="z-index:999; display:none"></img>
+            <img data-confirm-no-3 src="/img/icon_cross.png" id="confirmNo" class="confirm-btn-edit3" name="edit3" style="z-index:999; display:none"></img>
 
-            <div id="dramaTV" class="drama-details-tv"></div>
+            <li class="drama-details-date-of-boardcast-container">
+                <div class="drama-details-date-of-boardcast">
+                    <div class="drama-details-date-of-boardcast-title">首播日期:</div>
+                    <img src="/img/icon_edit_black.png" id="edit4" class="individual-edit-btn" style="z-index:999; display:none"></img>
+                    <img data-confirm-yes-4 src="/img/icon_tick.png" id="confirmYes" class="confirm-btn-edit4" name="edit4" style="z-index:999; display:none"></img>
+                    <img data-confirm-no-4 src="/img/icon_cross.png" id="confirmNo" class="confirm-btn-edit4" name="edit4" style="z-index:999; display:none"></img>
+        
+                    <div id="dramaDateOfBoardcast" class="drama-details-content-edit4"></div>
+                </div>
+            </li>
 
-            <li id="dramaDateOfBoardcast" class="drama-details-date-of-boardcast"></li>
-
-            <li class="drama-details-day-time">
-                <span id="dramaWeek"></span>
-                <span id="dramaTimeOfBoardcast"></span>
+            <li class="drama-details-day-time-container">
+                <div class="drama-details-day-time">
+                    <div id="dramaWeek" class="drama-details-content-edit5"></div><span style="margin-right:10px;">:</span>
+                    <img src="/img/icon_edit_black.png" id="edit5" class="individual-edit-btn" style="z-index:999; display:none"></img>
+                    <img data-confirm-yes-5 src="/img/icon_tick.png" id="confirmYes" class="confirm-btn-edit5" name="edit5" style="z-index:999; display:none"></img>
+                    <img data-confirm-no-5 src="/img/icon_cross.png" id="confirmNo" class="confirm-btn-edit5" name="edit5" style="z-index:999; display:none"></img>
+        
+                    
+                    <div id="dramaTimeOfBoardcast" class="drama-details-content-edit6"></div>
+                    <img src="/img/icon_edit_black.png" id="edit6" class="individual-edit-btn" style="z-index:999; display:none"></img>
+                    <img data-confirm-yes-6 src="/img/icon_tick.png" id="confirmYes" class="confirm-btn-edit6" name="edit6" style="z-index:999; display:none"></img>
+                    <img data-confirm-no-6 src="/img/icon_cross.png" id="confirmNo" class="confirm-btn-edit6" name="edit6" style="z-index:999; display:none"></img>
+        
+                </div>
             </li>
 
             <ul class="nav nav-tabs" id="myTab" role="tablist">
@@ -51,5 +89,6 @@
 
         </div>
     </div>
-    <div class="drama-edit">編輯</div>
+    <div id="dramaEditBtn" class="drama-edit">編輯</div>
+
 </div>
