Add: edit drama video link route and page

--- a/frontend/page/add/add.drama.ejs
+++ b/frontend/page/add/add.drama.ejs
@@ -50,6 +50,7 @@
                             <option>愛情</option>
                             <option>音樂</option>
                             <option>動漫改編</option>
+                            <option>醫療</option>
                             <option>勵志</option>
                             <option>警察/刑事</option>
                             <option>小說/文學改編</option>
