Add: edit actor and cast route and page

--- a/frontend/page/drama/drama.casts.ejs
+++ b/frontend/page/drama/drama.casts.ejs
@@ -1,8 +1,12 @@
 <div class="cast-header-container">
+    <img src="/img/icon_edit_black.png" id="edit8" class="individual-edit-btn" style="z-index:2; display:none"></img>
+    <img data-confirm-yes-8 src="/img/icon_tick.png" id="confirmYes" class="confirm-btn-edit8" name="edit8" style="z-index:2; display:none"></img>
+    <img data-confirm-no-8 src="/img/icon_cross.png" id="confirmNo" class="confirm-btn-edit8" name="edit8" style="z-index:2; display:none"></img>    
+
     <div class="cast-header-width">
         <div class="cast-header">主要演員</div>
     </div>
 </div>
 <div class="cast-center">
-    <div id="castContainer" class="cast-container"></div>
+    <div id="castContainer" class="drama-details-content-edit8"></div>
 </div>
