--- a/frontend/page/drama/drama.rating.ejs
+++ b/frontend/page/drama/drama.rating.ejs
@@ -1,7 +1,14 @@
 <div class="rating-container">
     <div class="rating-width">
-        <div class="rating">收視率</div>
-        <div id="dramaRating" class="rating-chart">
+        <div class="rating">
+            <div>收視率</div>
+            <div style="display: flex; justify-content: center; align-items: center;">
+                <img src="/img/icon_edit_black.png" id="edit9" class="individual-edit-btn" style="z-index:2; display:none"></img>
+                <img data-confirm-yes-9 src="/img/icon_tick.png" id="confirmYes" class="confirm-btn-edit9" name="edit9" style="z-index:2; display:none"></img>
+                <img data-confirm-no-9 src="/img/icon_cross.png" id="confirmNo" class="confirm-btn-edit9" name="edit9" style="z-index:2; display:none"></img>    
+            </div>
+        </div>
+        <div id="dramaRating" class="drama-details-content-edit9">
             <canvas id="myChart"></canvas>
         </div>
     </div>
