--- a/frontend/page/index/index.banner.ejs
+++ b/frontend/page/index/index.banner.ejs
@@ -6,5 +6,6 @@
             <input id="searchBarInput" type="text" class="form-control" placeholder="尋找日本劇集" aria-label="Recipient's username" aria-describedby="button-addon2">
             <button id="searchBarBtn" class="btn" type="button" id="button-addon2"></button>
         </div>
+        <div id="searchResult" class="search-result-menu"></div>
     </div>
 </div>
