--- a/frontend/public/css/index.css
+++ b/frontend/public/css/index.css
@@ -30,7 +30,9 @@
     z-index: 3;
     top: 35%;
     width: 50%;
+    height: 150px;
     margin-top: -100px;
+    opacity: 0.9;
 }
 
 .input-group, .form-control {
@@ -59,6 +61,28 @@
     font-size: 42px;
     font-weight: bold;
     text-align: center;
+}
+
+.search-result-menu {
+    display: none;
+    /* padding: 10px; */
+    border-radius: 5px;
+    background-color: #fff;
+    box-shadow: 0.3em 0.3em 1em rgba(0, 0, 0, 0.3);
+    opacity: 0.9;
+}
+
+.search-result-text,
+.search-no-result-text {
+    padding: 15px;
+    margin: -10px 0px -10px 0px;
+}
+
+.search-result-text:hover {
+    background-color: rgba(2, 178, 247, 0.075);
+    font-weight: bold;
+    color: rgb(10, 166, 228);
+    cursor: pointer;
 }
 
 
