--- a/frontend/page/drama/drama.script.ejs
+++ b/frontend/page/drama/drama.script.ejs
@@ -10,7 +10,10 @@
 <!-- <script src="https://unpkg.com/fast-average-color/dist/index.browser.min.js"></script> -->
 <!-- <script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script> -->
 <script src="/js/lib/hls.js"></script>
+<!-- <script src="/js/lib/tinymce/tinymce.min.js"></script> -->
 <script type="module" src="/js/drama/drama.main.js"></script>
+<script type="text/javascript" src="/js/lib/froala-editor/js/froala_editor.pkgd.min.js"></script>
+<script type="text/javascript" src="/js/lib/froala-editor/js/languages/zh_tw.js"></script>
 <script src="/js/lib/topbar.js"></script>
 
 </body>
