Add: discuss post page

--- a/frontend/page/drama/drama.discuss.ejs
+++ b/frontend/page/drama/drama.discuss.ejs
@@ -31,7 +31,7 @@
 
         </div>
 
-        <!-- <div class="discuss-content">
+        <div class="discuss-content">
             <div class="discuss-title">
                 <div class="discuss-title-user-profile">
                     <img class="discuss-title-user-profile-picture" src="https://www.themoviedb.org/t/p/w45_and_h45_face/qpuUNplRt3TrrEratMUFZiofNWD.jpg">
@@ -48,6 +48,7 @@
                 <img class="discuss-reply-icon-reply" src="/img/icon_reply.png">
                 <div class="discuss-reply-quote">引用</div>
             </div>
-        </div> -->
+        </div>
+        
     </div>
 </div>
