--- a/frontend/public/css/drama.css
+++ b/frontend/public/css/drama.css
@@ -420,16 +420,10 @@
     opacity: 0.8;
 }
 
-.fr-placeholder {
-    font-size: 18px !important;
-}
-
+.fr-placeholder,
 .fr-view {
-    font-size: 18px !important;
+    font-size: 16px !important;
 }
-
-
-
 
 
 /* Media */
